@@ -683,6 +683,135 @@ literal|true
 return|;
 block|}
 comment|//end membershipTest()
+comment|/**    * This method calculates an approximate count of the key, i.e. how many    * times the key was added to the filter. This allows the filter to be    * used as an approximate<code>key -&gt; count</code> map.    *<p>NOTE: due to the bucket size of this filter, inserting the same    * key more than 15 times will cause an overflow at all filter positions    * associated with this key, and it will significantly increase the error    * rate for this and other keys. For this reason the filter can only be    * used to store small count values<code>0&lt;= N&lt;&lt; 15</code>.    * @param key key to be tested    * @return 0 if the key is not present. Otherwise, a positive value v will    * be returned such that<code>v == count</code> with probability equal to the    * error rate of this filter, and<code>v&gt; count</code> otherwise.    * Additionally, if the filter experienced an underflow as a result of    * {@link #delete(Key)} operation, the return value may be lower than the    *<code>count</code> with the probability of the false negative rate of such    * filter.    */
+specifier|public
+name|int
+name|approximateCount
+parameter_list|(
+name|Key
+name|key
+parameter_list|)
+block|{
+name|int
+name|res
+init|=
+name|Integer
+operator|.
+name|MAX_VALUE
+decl_stmt|;
+name|int
+index|[]
+name|h
+init|=
+name|hash
+operator|.
+name|hash
+argument_list|(
+name|key
+argument_list|)
+decl_stmt|;
+name|hash
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|nbHash
+condition|;
+name|i
+operator|++
+control|)
+block|{
+comment|// find the bucket
+name|int
+name|wordNum
+init|=
+name|h
+index|[
+name|i
+index|]
+operator|>>
+literal|4
+decl_stmt|;
+comment|// div 16
+name|int
+name|bucketShift
+init|=
+operator|(
+name|h
+index|[
+name|i
+index|]
+operator|&
+literal|0x0f
+operator|)
+operator|<<
+literal|2
+decl_stmt|;
+comment|// (mod 16) * 4
+name|long
+name|bucketMask
+init|=
+literal|15L
+operator|<<
+name|bucketShift
+decl_stmt|;
+name|long
+name|bucketValue
+init|=
+operator|(
+name|buckets
+index|[
+name|wordNum
+index|]
+operator|&
+name|bucketMask
+operator|)
+operator|>>>
+name|bucketShift
+decl_stmt|;
+if|if
+condition|(
+name|bucketValue
+operator|<
+name|res
+condition|)
+name|res
+operator|=
+operator|(
+name|int
+operator|)
+name|bucketValue
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|res
+operator|!=
+name|Integer
+operator|.
+name|MAX_VALUE
+condition|)
+block|{
+return|return
+name|res
+return|;
+block|}
+else|else
+block|{
+return|return
+literal|0
+return|;
+block|}
+block|}
 annotation|@
 name|Override
 specifier|public
