@@ -1342,7 +1342,7 @@ argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
-comment|// to test for overflows, add 'key' enough times to overflow an 8bit bucket,
+comment|// to test for overflows, add 'key' enough times to overflow a 4bit bucket,
 comment|// while asserting that it stays a member
 for|for
 control|(
@@ -1353,7 +1353,7 @@ literal|0
 init|;
 name|i
 operator|<
-literal|257
+literal|16
 condition|;
 name|i
 operator|++
@@ -1374,6 +1374,145 @@ name|membershipTest
 argument_list|(
 name|key
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|// test approximateCount
+name|CountingBloomFilter
+name|bf3
+init|=
+operator|new
+name|CountingBloomFilter
+argument_list|(
+literal|4
+argument_list|,
+literal|2
+argument_list|,
+name|Hash
+operator|.
+name|JENKINS_HASH
+argument_list|)
+decl_stmt|;
+comment|// test the exact range
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|8
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|bf3
+operator|.
+name|add
+argument_list|(
+name|key
+argument_list|)
+expr_stmt|;
+name|bf3
+operator|.
+name|add
+argument_list|(
+name|k2
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bf3
+operator|.
+name|approximateCount
+argument_list|(
+name|key
+argument_list|)
+argument_list|,
+name|i
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bf3
+operator|.
+name|approximateCount
+argument_list|(
+name|k2
+argument_list|)
+argument_list|,
+name|i
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+comment|// test gently degraded counting in high-fill, high error rate filter
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|8
+init|;
+name|i
+operator|<
+literal|15
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|bf3
+operator|.
+name|add
+argument_list|(
+name|key
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|bf3
+operator|.
+name|approximateCount
+argument_list|(
+name|key
+argument_list|)
+operator|>=
+operator|(
+name|i
+operator|+
+literal|1
+operator|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bf3
+operator|.
+name|approximateCount
+argument_list|(
+name|k2
+argument_list|)
+argument_list|,
+literal|8
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bf3
+operator|.
+name|approximateCount
+argument_list|(
+name|k3
+argument_list|)
+argument_list|,
+literal|0
 argument_list|)
 expr_stmt|;
 block|}
